re-sized/shaped search box and background image of search box

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <div>
     <img src="logo.png" id="logo" class="align"/>
-    <input type="text" placeholder="search">
+    <input id= "input" type="url" placeholder="">
 </div>
    
 </body>
