--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
 </head>
 <body>
 <div>
+    <a href="https://www.w3schools.com/" id="about"; style="text-decoration:none; color:black"; >About</a>
+    <a href="https://www.w3schools.com/" id="store"; style="text-decoration:none; color:black";>Store</a> 
+    <img src="https://icon-library.com/images/google-apps-icon-png/google-apps-icon-png-28.jpg" id="app"/>    
+</div>
+    
+<div>
     <img src="logo.png" id="logo" class="align"/>
     <input id= "input" type="url" placeholder="">
 </div>
-   
+<div>
+    <button type="button" class="button1">
+Google Search
+    </button>
+</div>   
+<div class="francais1">
+Google offered in:  <a href="https://www.w3schools.com/" style="text-decoration:none";>Français</a>     
+</div>
 </body>
 </html>
